Reworded question in chapter 2

--- a/content/chapter2-experimental-design.tex
+++ b/content/chapter2-experimental-design.tex
@@ -579,8 +579,8 @@ number of questions.
     \item Which combination of voting mechanism and weighting mechanism
     produces the lowest error?
 
-    \item Is it even worthwhile to use proxy voting, given we have already replaced
-    the more expensive measurement technique?
+    \item Is it even worthwhile to use proxy voting, given the more expensive
+    measurement technique has already replaced by the less expensive measurements?
     Or would it be better to simply average all the agents' estimates?
 
     % Ratio is likely important here
