Abstract and Public Abstract edits

--- a/content/frontmatter/abstract.tex
+++ b/content/frontmatter/abstract.tex
@@ -19,9 +19,10 @@
     inactive and pass their vote to a proxy that does.
     The hope is this proxy will be an expert on the topic and therefore will yield a
     more informed end decision.
-    This study looks into exploiting this proxy-inactive agent relationship in order
-    to increase the accuracy of a measurement system while using less expensive forms
-    of measurement.
+    This study investigates the ability of a proposed system to be used as a way to
+    replace expensive, but highly accurate, measurements with less expensive,
+    though less accurate, measurements through the use of proxy voting by exploiting
+    this proxy-inactive agent relationship.
     Multiple types of voting, dubbed `voting mechanisms,' are developed and tested,
     as well as several ways to allow inactive agents to divide their votes amongst
     proxies named `weighting mechanisms.'
