--- a/content/frontmatter/publicabstract.tex
+++ b/content/frontmatter/publicabstract.tex
@@ -16,11 +16,11 @@ someone else so they may vote for them.
 This type of voting system allows for those without the time or knowledge necessary
 to become informed on a topic to pass their votes to an individual they trust who
 knows more about the topic, dubbed an expert.
-This study investigates the ability of proxy vote systems to be used as a way to make
-taking measurements more accurate by allowing less expensive measurements to pass their
-vote on to more expensive `expert' measurement techniques.
-\vicki{You talk about a more accurate way of taking measurements.
-Voting isn’t normally about measurements, so we need clarification of the setup.}
+This study investigates the ability of a proposed system to be used as a way to
+replace expensive, but highly accurate, measurements with less expensive,
+though less accurate, measurements through the use of proxy voting.
+% \vicki{You talk about a more accurate way of taking measurements.
+% Voting isn’t normally about measurements, so we need clarification of the setup.}
 
 
 \end{publicabstract}
