--- a/thesis.tex
+++ b/thesis.tex
@@ -102,7 +102,7 @@
 
 % Author and Title Information
 \author{Michael D. Hegerhorst}
-\title{An Exploration into the Use of Proxy Votes to Increase System Accuracy}
+\title{An Exploration into the Use of a Proxy Vote Measurement System to Replace Undesirable Measurements}
 
 \newcommand{\blue}[1]{\textcolor{blue}{#1}}
 \newcommand{\vicki}[1]{\textcolor{blue}{Vicki: #1}}
