--- a/content/frontmatter/abstract.tex
+++ b/content/frontmatter/abstract.tex
@@ -15,14 +15,16 @@
     other agents, known as proxies.
     These proxies vote on behalf of the agents who gave up their vote.
     The idea behind this type of voting system is to allow agents without the time
-    or knowledge necessary to properly become informed on a topic to become
+ \com{Still seems to rely on earlier formulation of the problem.  We need a situation where voters have a meaningful opinion but are unable to vote.  When you had to actually go to the polls, it wasn't uncommon for someone to have a meaningful opinion but be unable/unwilling to vote.  If we could replicate that situation where they are able to select a proxy voter, we could justify our study.}    or knowledge necessary to properly become informed on a topic to become
     inactive and pass their vote to a proxy that does.
     The hope is this proxy will be an expert on the topic and therefore will yield a
     more informed end decision.
     This study investigates the ability of a proposed system to be used as a way to
     replace expensive, but highly accurate, measurements with less expensive,
     though less accurate, measurements through the use of proxy voting by exploiting
-    this proxy-inactive agent relationship.
+    this proxy-inactive agent relationship.  \com{
+    
+    Here's another idea.  In the House, people have been voting by proxy because they have health issues and don't want the contact.  An article I read said 80\% of members had used that option.  What if we study how that practice effects voting results?  The "truth" is the actual vote if everyone voted.  We are seeing how close proxy voting comes. }
     Multiple types of voting, dubbed `voting mechanisms,' are developed and tested,
     as well as several ways to allow inactive agents to divide their votes amongst
     proxies named `weighting mechanisms.'
