--- a/thesis.tex
+++ b/thesis.tex
@@ -106,6 +106,7 @@
 
 \newcommand{\blue}[1]{\textcolor{blue}{#1}}
 \newcommand{\vicki}[1]{\textcolor{blue}{Vicki: #1}}
+\newcommand{\com}[1]{\textcolor{brown}{Vicki: #1}}
 % The Committee
 \majorprof{Vicki Allan, Ph.D.}
 \firstreader{John Edwards, Ph.D.}
