Dr. Allan's next notes

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -112,10 +112,10 @@ The reasoning behind this compulsory proxy system is to allow a system designer 
 choose a suitable set of measurement techniques as the proxies, and reinforce their
 measurements using the other agents.
 %
-\com{Doesn't make sense for the House case.}
+\com{Doesn't make sense for the House case  Better bit to have this restriction.}
 
 Using the concepts discussed above, the system proposed in this study
-operates like so:
+operates as follows:
 A measurement is taken, and the resulting value is subsequently represented as the
 measurement's preference.
 After taking several measurements, either simultaneously or sequentially, weights will
@@ -127,13 +127,11 @@ controls sensors used to take measurements, but one could use a simple system em
 simple voting and weighting mechanisms with pen and paper if they are willing to take
 the required measurements by hand.
 
-\com{I'm going to stop reading here until I hear back from you about the new
-application. The application selected colors all other decisions.}
 
 This paper will explore the potential circumstances under which this system will be
 beneficial, as well as outline what types of measurement techniques should be proxies
 and which mechanisms to use.
-In order to perform this analysis, a known truth value \truth\ will be selected.
+In order to perform this analysis, a known truth value \truth\ will be selected.  \com{computed?}
 The system proposed above will then estimate the known truth using
 values pulled from probability distributions to represent values obtained from
 performing real measurements.
@@ -147,7 +145,7 @@ in order to determine how well the system worked.
 \section{Background}\label{sec:background}
 \textit{Proxy voting} involves allowing agents to transfer their voting power
 from themselves to another agent, known as a \textit{proxy}\cite[para.~1.4]
-{Cohensius2017}.
+{Cohensius2017  \com{No need to give paragraph.  You are mainly giving credit for the idea.  You can't give Cohesius credit for the idea of proxy voting.}
 This adds to the voting power of the proxy, which is called its `weight.'
 By doing so, the transferring agent loses their ability to directly affect the
 voting game, instead allowing the proxy to affect it on their behalf.
@@ -165,7 +163,8 @@ Naturally, this is extremely useful when the cost of voting is high, such as
 when remaining educated on a topic is difficult or
 time-consuming~\cite[para.~1.1]{Mueller1972}, uncomfortable work such as
 standing in long queues is required, or other frustrating or costly obstacles
-must be overcome.
+must be overcome.  \com{Pick an application area and discuss the advantages of proxy voting for them.  The cost of remaining educated indicates the person doesn't have a researched opinion.  That is quite different from not being able to vote because of inconvenience.  In many cases, we want the voters to be informed.  If they aren't, there are reasons to discount their vote.}
+
 In these cases, proxy voting allows voters to skip incurring the costs while
 still having their voice heard by allowing a proxy to perform the work once on
 behalf of all voters who transfer their power to that proxy.
@@ -193,12 +192,13 @@ accurate measurement techniques.
 In addition to reducing individual agents' work, proxy voting also often has
 the effect of increasing the system welfare by increasing the accuracy of the
 system~\cite[sec.~1.1]{Cohensius2017}.
+\com{Briefly explain in a phrase or two how it increases accuracy.}
 However, this increase does not work in all circumstances and so proxy voting
 should be used after investigating the voting mechanism used and the potential
 pitfalls of that mechanism under proxy voting.
 
 In some cases, the proxy is also able to transfer their own vote, as well as the rest of
-their weight, to yet another proxy.
+their weight, to yet another proxy   \com{What do you mean by voting weight?}
 % \vicki{You haven't told us about voting weight. If I can transfer my vote, why not
 % weight? }
 This is known as \textit{liquid democracy}, which has its own challenges and
@@ -207,7 +207,7 @@ However, simple proxy voting, where proxies cannot transfer their voting power,
 is sufficient for the research performed in this paper.
 
 Proxy voting and liquid democracy are well-discussed topics with a number of
-papers investigating their viability, advantages, and disadvantages.
+papers investigating their viability, advantages, and disadvantages.  \com{Cite those papers here.}
 Many of these studies focus on political and societal uses for these techniques,
 but some of their discoveries can be used for this paper's purposes.
 
@@ -239,7 +239,9 @@ However, proxy voting is not without its flaws.
 ~\cite[para.~1.3]{Golz2021}, which are proxies that receive an extremely large
 amount of power.
 This can be problematic because the result of a system will be too biased
-towards the super voter.
+towards the super voter.  \com{Explain why the super is a problem. It seems part of the proxy philosophy.  
+If many voters use proxies,  you aren't going to see the richness of preferences. This shouldn't have been a surprise.}
+
 For this paper's purposes, a poor distribution of measurements may make one
 proxy a super voter and increase the error of the system.
 % \vicki{here it appears you know absolute truth, and just want to assure the voting
@@ -254,6 +256,7 @@ are available.
 This is accomplished by first taking a number of measurements to serve as proxies, then
 supplementing any lack of precision by allocating votes from other measurement
 techniques.
+{This makes total sense to me, in not employing sensors if they appear not to be needed.  If all the cheap sensors agree, is there really any point in employing an expensive sensors.  But is this really proxy voting?  It seems more like "not voting", as the expensive sensor has no opinion. }
 Additionally, this paper experiments with using different voting mechanisms and
 weighting mechanisms in an attempt to optimize proxy voting for different
 distributions of error.
