Fixed formatting and added some comments

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -145,7 +145,8 @@ in order to determine how well the system worked.
 \section{Background}\label{sec:background}
 \textit{Proxy voting} involves allowing agents to transfer their voting power
 from themselves to another agent, known as a \textit{proxy}\cite[para.~1.4]
-{Cohensius2017  \com{No need to give paragraph.  You are mainly giving credit for the idea.  You can't give Cohesius credit for the idea of proxy voting.}
+{Cohensius2017}  \com{No need to give paragraph.  You are mainly giving credit for
+the idea.  You can't give Cohesius credit for the idea of proxy voting.}
 This adds to the voting power of the proxy, which is called its `weight.'
 By doing so, the transferring agent loses their ability to directly affect the
 voting game, instead allowing the proxy to affect it on their behalf.
@@ -256,7 +257,12 @@ are available.
 This is accomplished by first taking a number of measurements to serve as proxies, then
 supplementing any lack of precision by allocating votes from other measurement
 techniques.
-{This makes total sense to me, in not employing sensors if they appear not to be needed.  If all the cheap sensors agree, is there really any point in employing an expensive sensors.  But is this really proxy voting?  It seems more like "not voting", as the expensive sensor has no opinion. }
+\com{This makes total sense to me, in not employing sensors if they appear not to be
+needed.
+If all the cheap sensors agree, is there really any point in employing an expensive
+sensors.
+But is this really proxy voting?  It seems more like "not voting", as the expensive
+sensor has no opinion.}
 Additionally, this paper experiments with using different voting mechanisms and
 weighting mechanisms in an attempt to optimize proxy voting for different
 distributions of error.
