Added reference to 2020 Proxy Vote bill

--- a/references/research.bib
+++ b/references/research.bib
@@ -126,4 +126,12 @@ There is not the first time proxy voting was discussed. There are other articles
   url        = {https://doi.org/10.1145/3485012},
 }
 
+@Online{Congress.gov2020,
+  author  = {Congress.gov},
+  title   = {H.Res.965 - Authorizing remote voting by proxy in the House of Representatives and providing for official remote committee proceedings during a public health emergency due to a novel coronavirus, and for other purposes.},
+  url     = {https://www.congress.gov/bill/116th-congress/house-resolution/965},
+  urldate = {2022-10-11},
+  year    = {2020},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
