Added US Constitution to references

--- a/references/research.bib
+++ b/references/research.bib
@@ -134,4 +134,13 @@ There is not the first time proxy voting was discussed. There are other articles
   year    = {2020},
 }
 
+@Misc{USConstitution,
+  author = {James Madison},
+  month  = sep,
+  note   = {Section. 5. states a majority constitutes a quorum, which is required to perform business.},
+  title  = {The Constitution of the United States},
+  year   = {1787},
+  url    = {https://www.archives.gov/founding-docs/constitution-transcript},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
