--- a/references/research.bib
+++ b/references/research.bib
@@ -134,6 +134,16 @@ There is not the first time proxy voting was discussed. There are other articles
   year    = {2020},
 }
 
+
+@Online{Clerk.House.gov2022,
+    author = {Congress.gov},
+    title = {Proxy Letters},
+    url = {https://clerk.house.gov/ProxyLetter},
+    urldate = {2022-10-11},
+    year = {2022},
+@Online{Clerk.House.gov2022,
+}
+
 @Misc{USConstitution,
   author = {James Madison},
   month  = sep,
