Wrote new intro paragraph

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -7,6 +7,26 @@
 \thispagestyle{empty}
 %%%%%%%%%%%%%
 
+On May 13th, 2020, the 116th United States Congress introduced a resolution
+to permit the use of proxy voting during emergencies for members of the House of
+Representatives~\cite{Congress.gov2020}.
+This resolution was passed on May 15th, 2020, and was quickly put to use, as
+indicated by the letters required to designate a proxy~\cite{Clerk.House.gov2020}.
+The hope behind the resolution was to allow members of the House of Representatives
+to vote remotely, in order to prevent the spread of COVID-19~\cite{Congress.gov2020}.
+However, the question remains as to what degree proxy voting affects the results of
+the vote.
+In this study, we explore the effects of proxy voting on the results of the vote
+under a number of opinion distributions.
+We additionally explore how different voting rules affect the results of the vote.
+
+% TODO: State we assume fairly ideal conditions where an inactive voter can choose
+% their proxy per-topic.
+
+
+
+
+
 The ability to correctly take measurements is an important part of human
 progress, both in terms of everyday lives and the advancement of science.
 Having the ability to take highly precise and accurate measurements is essential
