Made quick outline

--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -22,6 +22,19 @@ We additionally explore how different voting rules affect the results of the vot
 
 % TODO: State we assume fairly ideal conditions where an inactive voter can choose
 % their proxy per-topic.
+% TODO: Outline
+% Discuss my assumptions
+%   - Per-topic proxy selection
+%   - Perfect knowledge of potential proxy's positions
+%       - This might need to be discussed after the readers have an understanding of
+%         the model.
+%  - No other factors (e.g. party affiliation)
+% Discuss opinion model (Cohensius)
+% Background
+%   - Proxy voting
+%       - Why it is desirable
+%   - What are voting rules
+% Contribution
 
 
 
