--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -81,7 +81,7 @@ opinions are closer to the center.
     \label{fig:system-metric-space}
 \end{figure}
 
-This model also naturally extends to two- or other multidimensional spaces, such as
+This model also naturally extends to two- or higher-dimensional spaces, such as
 the opinions of a congress member on multiple topics.
 However, for the purposes of this study, we will only consider the idealistic
 situation where a congress member can choose their proxy for each topic individually.
