--- a/content/chapter1-introduction.tex
+++ b/content/chapter1-introduction.tex
@@ -10,8 +10,9 @@
 On May 13th, 2020, the 116th United States Congress introduced a resolution
 to permit the use of proxy voting during emergencies for members of the House of
 Representatives~\cite{Congress.gov2020}.
-This resolution was passed on May 15th, 2020, and was quickly put to use, as
-indicated by the letters required to designate a proxy~\cite{Clerk.House.gov2020}.
+This resolution was passed on May 15th, 2020, and as indicated by proxy designation
+letters sent to the Clerk of the House of Representatives (available for public
+viewing in~\cite{Clerk.House.gov2020}), was put to use as soon as five days later.
 The hope behind the resolution was to allow members of the House of Representatives
 to vote remotely, in order to prevent the spread of COVID-19~\cite{Congress.gov2020}.
 However, the question remains as to what degree proxy voting affects the results of
